--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "client",
+  "name": "collaterial-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier **/*.{js,ts,tsx,json,graphql} --check",
+    "format:fix": "prettier **/*.{js,ts,tsx,json,graphql} --write"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -41,6 +43,7 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "prettier": "3.2.5"
   }
 }
