--- a/client/package.json
+++ b/client/package.json
@@ -19,15 +19,19 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.15",
+    "@radix-ui/react-popover": "^1.0.7",
     "@tanstack/react-query": "^5.29.2",
     "@types/node": "^20.12.7",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "jotai": "^2.8.0",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8",
+    "tailwind-merge": "^2.3.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -41,9 +45,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "prettier": "3.2.5"
+    "vite": "^5.2.0"
   }
 }
