--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^5.15.15",
     "@radix-ui/react-popover": "^1.0.7",
     "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.32.0",
     "@types/node": "^20.12.7",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
