--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "format:fix": "prettier **/*.{js,ts,tsx,json,graphql} --write"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.19.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.12",
@@ -30,6 +32,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.3.0",
